vlib/v/checker/tests/module_not_at_same_line_err.out
vlib/v/checker/tests/module_not_at_same_line_err.vv:2:1: error: `module` and `main` must be at same line
    1 | module
    2 | main
      | ~~~~
    3 | fn main() {
    4 |     println('hello, world')
